<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/img_success"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="20dp"
        android:background="@mipmap/success"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:textSize="30sp"
        android:text="@string/order_success"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/talk_pa"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/talk_pa"
            android:textColor="@color/color_ff"
            android:textSize="15sp"
            android:background="@drawable/login_button_down"
            android:layout_margin="20dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/textView" />

        <Button
            android:id="@+id/back_map"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:textColor="@color/color_ff"
            android:text="@string/back_map"
            android:textSize="15sp"
            android:background="@drawable/login_button_down"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>