<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/title_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/car"
            android:layout_margin="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@+id/title_icon"
            android:text="@string/order_message"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="20dp">

        <TextView
            android:id="@+id/passenger_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="位置："
            android:maxLines="3"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/passenger_location_text"
            android:layout_toRightOf="@+id/passenger_location"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/passenger_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="距离："
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/passenger_distance_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"
            android:layout_toRightOf="@+id/passenger_distance"
           />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/deterMine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/determine_order"
            android:textColor="@color/color_ff"
            android:textSize="15sp"
            android:background="@drawable/login_button_down"
            android:layout_margin="20dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/textView" />

        <Button
            android:id="@+id/backList"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:textColor="@color/color_ff"
            android:text="@string/back_list"
            android:textSize="15sp"
            android:background="@drawable/login_button_down"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>